--- a/property-management-portal/src/index.css
+++ b/property-management-portal/src/index.css
@@ -5,6 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+  color: #555;
+  font-size: 15px;
+  line-height: 26px;
 }
 
 code {
