--- a/property-management-portal/src/App.css
+++ b/property-management-portal/src/App.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "FontAwesome";
+  src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.woff2");
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
