--- a/property-management-portal/src/components/Home/Home.scss
+++ b/property-management-portal/src/components/Home/Home.scss
@@ -5,4 +5,42 @@
   > div {
     z-index: 0;
   }
+
+  .pic {
+    width: 100%;
+  }
+
+  .slick-slider {
+    .slick-prev,
+    .slick-next {
+      z-index: 1;
+      opacity: 0;
+
+      &:before {
+        font-size: 40px
+      }
+    }
+
+    .slick-prev {
+      left: 8px;
+    }
+
+    .slick-next {
+      right: 25px;
+    }
+
+    &:hover {
+      .slick-prev,
+      .slick-next {
+        opacity: 0.8;
+      }
+    }
+  }
+
+  .widget {
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    width: 30%;
+  }
 }
