--- a/property-management-portal/src/components/SearchWidget/SearchWidget.scss
+++ b/property-management-portal/src/components/SearchWidget/SearchWidget.scss
@@ -1,12 +1,14 @@
 .searchWidget {
     background: #fff none repeat scroll 0 0;
+    border-radius: 8px;
 
     .property-search-header {
         padding: 15px 20px;
-        background: #3F85CE none repeat scroll 0 0;
+        background: #fff none repeat scroll 0 0;
+        border-radius: 8px;
 
         h3 {
-            color: #fff;
+            color: #3F85CE;
             font-family: 'Poppins', sans-serif;
             font-weight: 500;
             font-size: 19px;
