--- a/property-management-portal/src/components/SearchWidget/SearchWidget.scss
+++ b/property-management-portal/src/components/SearchWidget/SearchWidget.scss
@@ -1,39 +1,37 @@
 .searchWidget {
+  background: #fff none repeat scroll 0 0;
+  border-radius: 8px;
+  width: 600px;
+  margin: 0 auto;
+
+  .property-search-header {
+    padding: 15px 20px 0;
     background: #fff none repeat scroll 0 0;
     border-radius: 8px;
 
-    .property-search-header {
-        padding: 15px 20px;
-        background: #fff none repeat scroll 0 0;
-        border-radius: 8px;
-
-        h3 {
-            color: #3F85CE;
-            font-family: 'Poppins', sans-serif;
-            font-weight: 500;
-            font-size: 19px;
-            margin: 0;
-        }
+    h3 {
+      color: #3F85CE;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 500;
+      font-size: 19px;
+      margin: 0;
     }
+  }
 
-    .property-search-body {
-        padding: 20px;
+  form .control, .checkbox-property {
+    margin-bottom: 10px;
+  }
 
-        form .control, .checkbox-property {
-            margin-bottom: 10px;
-        }
-
-        form button {
-            display: block;
-            color: #fff;
-            text-transform: capitalize;
-            padding: 5px 10px;
-            cursor: pointer;
-            border-radius: 5px;
-            border: 1px solid #3F85CE;
-            font-weight: 600;
-            background: #3F85CE none repeat scroll 0 0;
-            width: 100%;
-        }
-    }
+  form button {
+    display: block;
+    color: #fff;
+    text-transform: capitalize;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: 1px solid #3F85CE;
+    font-weight: 600;
+    background: #3F85CE none repeat scroll 0 0;
+    width: 100%;
+  }
 }
