get presign url for uploading image to s3, multiple uploading in frontend

--- a/property-management-portal/src/components/Property/CreateProperty/CreateProperty.scss
+++ b/property-management-portal/src/components/Property/CreateProperty/CreateProperty.scss
@@ -10,3 +10,14 @@ h4 {
 p.capitalize::first-letter, p.Mui-error::first-letter {
   text-transform: capitalize !important;
 }
+
+.picture-capture {
+  padding: 5px 0;
+  margin: 10px 0;
+
+  li {
+    list-style: none;
+    padding: 5px;
+    margin: 5px;
+  }
+}
