--- a/property-management-portal/src/components/PropertyList/PropertyList.scss
+++ b/property-management-portal/src/components/PropertyList/PropertyList.scss
@@ -2,3 +2,10 @@
     margin-top: 20px;
     margin-bottom: 10px;
 }
+
+.pagination {
+    display: flex;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    justify-content: center;
+}
