- Add more dashboard.

--- a/property-management-portal/src/components/Header/Header.scss
+++ b/property-management-portal/src/components/Header/Header.scss
@@ -225,6 +225,12 @@ header {
       background: #fff none repeat scroll 0 0;
       width: 150px;
       margin: auto;
+
+      &:hover {
+        background: #3F85CE none repeat scroll 0 0;
+        color: #fff;
+        border: 1px solid #fff;
+      }
     }
   }
 
