--- a/property-management-portal/src/components/Dashboard/DashboardAdmin.scss
+++ b/property-management-portal/src/components/Dashboard/DashboardAdmin.scss
@@ -1,3 +1,5 @@
+@import "./Dashboard.scss";
+
 .dashboard-admin {
   .single-property {
     background: #fff none repeat scroll 0 0;
@@ -55,6 +57,10 @@
       text-align: center;
 
       .property-info-head {
+        a {
+          text-decoration: none;
+        }
+
         h3 {
           font-family: 'Poppins', sans-serif;
           font-size: 20px;
